--- a/02_if_else_logic_START_(4).ipynb
+++ b/02_if_else_logic_START_(4).ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "cell_execution_strategy": "setup",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +73,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dacfb50a-1cce-4772-cdcc-9efc43c9a95b"
+        "outputId": "b8bfe83d-de88-4686-ad57-0e4e9374ce1a"
       },
       "source": [
         "# = single equal sign is the Assignment Operator (it SETS a value)\n",
@@ -122,7 +123,7 @@
       "metadata": {
         "id": "T8nG2qDmqh7_"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -157,9 +158,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "McosXmR7DbMz",
-        "outputId": "8cdffc58-f662-4029-f0c8-bd3edac3e387"
+        "outputId": "e3a0b63c-af48-44e8-ae00-15bca078c6c0"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8523fc4f-2d30-49f1-eeca-3b7a5e7db24a"
+        "outputId": "c3ce6bca-690d-405a-cd80-5ecc77f17693"
       },
       "execution_count": 4,
       "outputs": [
@@ -239,7 +240,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "196cc7c8-6c9b-4ac7-b3d9-b7a41fc583ae"
+        "outputId": "89665bcd-0cb4-4cc1-e010-7323f48635c4"
       },
       "execution_count": 5,
       "outputs": [
@@ -285,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5tDhGOp1GOVV",
-        "outputId": "fe1b8ce1-8918-45b7-8a14-3a68ad137ea7"
+        "outputId": "ed2693d9-a286-47be-a6ec-8906a44b228c"
       },
       "execution_count": 6,
       "outputs": [
@@ -333,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p8ZQ_s7dAavY",
-        "outputId": "6808b93b-10a3-4855-b584-3c11876753c4"
+        "outputId": "07136859-1374-4483-f280-a1bc55debae2"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,9 +361,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wX4OJ-FFBKJp",
-        "outputId": "96ed3c1c-edc9-4657-8b6a-72d845f607da"
+        "outputId": "61844da8-dbde-4eb3-9b4c-de3d4c5194f3"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +391,7 @@
       "metadata": {
         "id": "9pzaF7llwf8I"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -400,7 +401,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "250b6f6e-4206-4712-a8c0-803ebcc82735"
+        "outputId": "d711efa2-f78c-41c4-8dda-07d90c9b68f5"
       },
       "source": [
         "# declare a string var and use if-else logic to\n",
@@ -438,7 +439,7 @@
         "print() # ['celery']\n",
         "print() # celery"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +472,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40005f8f-b493-4b50-be91-63ace7b071d3"
+        "outputId": "6510944a-1a51-4717-f011-825490dd357b"
       },
       "source": [
         "# in and not in keywords also used for bool comparisons\n",
@@ -482,7 +483,7 @@
         "print('Chevy') # True\n",
         "print('Chevy') # False"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,15 +514,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3OhYuDTA46L_",
-        "outputId": "bd73767b-895f-4211-8a75-5d7c7e08e93d"
+        "outputId": "34c9a340-6c03-4ece-d3f5-59cf015b09e7"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Audi', 'BMW', 'Chevy', 'Dodge', 'Mercedes']\n"
+            "\n"
           ]
         }
       ]
@@ -542,15 +543,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7T7axDikMoSy",
-        "outputId": "4c327834-d42b-45fb-f39c-3e0051f146af"
+        "outputId": "48dddcff-3439-4bbe-d252-4e3d621a9d6e"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Audi', 'BMW', 'Chevy', 'Dodge', 'Mercedes', 'Aston Martin']\n"
+            "\n"
           ]
         }
       ]
@@ -596,16 +597,16 @@
           "height": 106
         },
         "id": "fsFHkryn1lNn",
-        "outputId": "dfecab54-848b-4381-fb2a-bf51fed865ab"
+        "outputId": "6106b517-de2a-43da-ec16-1ed1f28d8ed8"
       },
-      "execution_count": 58,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-58-cd6dc6efc76b>, line 10)",
+          "evalue": "invalid syntax (<ipython-input-13-cd6dc6efc76b>, line 10)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-cd6dc6efc76b>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-cd6dc6efc76b>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -628,23 +629,10 @@
         "# 'You FAILED the test'"
       ],
       "metadata": {
-        "id": "TocOyZ_B5xFM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "39da39cf-7afe-4306-a568-c20d2b67a186"
+        "id": "TocOyZ_B5xFM"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "What was your test score? 55\n",
-            "You FAILED the test\n"
-          ]
-        }
-      ]
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -665,7 +653,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 211
         },
-        "outputId": "f4826a52-7cfa-494e-b868-8729ececb77d"
+        "outputId": "8ccfd64a-f31f-41f4-b9af-e9365c04afa6"
       },
       "source": [
         "# if - elif - else (elif is short for \"else if\")\n",
@@ -696,7 +684,7 @@
         "\n",
         "# \"Sorry! You FAILED the test!\""
       ],
-      "execution_count": 88,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "error",
@@ -705,7 +693,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-88-6fbce0c339a6>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m'test score '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mis_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m  \u001b[0;31m# True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-19-6fbce0c339a6>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m'test score '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mis_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m  \u001b[0;31m# True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'is_' is not defined"
           ]
         }
@@ -715,32 +703,59 @@
       "cell_type": "code",
       "source": [
         "# Refactor the above code to print out Letter grades A-F\n",
+        "# CHALLENGE: make an input() to accept a test score as integer from 0-100\n",
+        "# 'Test Score: '\n",
+        "# write if-else which compares score to 65\n",
+        "# if score is >= 65, print \"You PASSED the test!\"\n",
+        "# else print \"Sorry! You FAILED the test!\"\n",
+        "# run it twice, once to pass and again to fail\n",
+        "# 'concert ticket' # must have 95+ to be eligible\n",
+        "# bool must be true to get reward\n",
         "\n",
+        "# how to refactor logic so that score of 95+ gets a\n",
+        "# reward BUT only if boolean is true\n",
+        "# 'What was your test score? '\n",
+        "\n",
+        "\n",
+        "# 'You PASSED the test'\n",
+        "\n",
+        "# 'You FAILED the test'\n",
         "# \"Please enter a score from 0-100\"\n",
-        "Grade_Score = int(input(\"Please enter a score from 0-100:\"))\n",
-        "#if(Grade_Score>=0 and Grade_Score<=100):\n",
-        "  if(Grade_Score>=90 and Grade_Score<=100):\n",
-        "    print(\"Congrats! You got an A and a free concert ticket!\")\n",
-        "    elif(Grade_Score>=80 and Grade_Score <90):\n",
-        "      print(\"Good Job! got a B!\")\n",
-        "      elif(Grade_Score>=70 and Grade_Score <80):\n",
-        "      print(\"Okay You got a C!\")\n",
-        "      elif(Grade_Score>=65 and Grade_Score <70):\n",
-        "      print(\"Yikes! You got a D!\")\n",
-        "      elif(Grade_Score<65):\n",
-        "      print('Sorry! You FAILED the test!')\n",
-        "      else: print('Please enter a valid score')\n",
         "\n",
-        "# \"Good job! You got a B!\"\n",
-        "# \"Okay! You got a C!\"\n",
-        "# \"Yikes! You got a D!\"\n",
-        "# \"Sorry! You FAILED the test!\""
+        "Grade_Score = int(input(\"Please enter a score from 0-100:\"))\n",
+        "if(Grade_Score>=0 and Grade_Score<=100):\n",
+        "  if(Grade_Score>=95 and Grade_Score<=100):\n",
+        "    print(\"Congrats! You got an A and a free concert ticket!\")\n",
+        "  elif(Grade_Score>=90 and Grade_Score <95):\n",
+        "        print(\"Congrats! You got a A!\")\n",
+        "  elif(Grade_Score>=80 and Grade_Score <90):\n",
+        "        print(\"Good Job You got a B!\")\n",
+        "  elif(Grade_Score>=70 and Grade_Score <80):\n",
+        "        print(\"Okay! You got a C!\")\n",
+        "  elif(Grade_Score>=65 and Grade_Score <70):\n",
+        "        print(\"Yikes! You got a D!\")\n",
+        "  elif(Grade_Score<65):\n",
+        "       print('Sorry! You FAILED the test!')\n",
+        "else: print(\"Please enter a valid score\")"
       ],
       "metadata": {
-        "id": "TmaqVPOy8dtz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TmaqVPOy8dtz",
+        "outputId": "99f1b351-4c0b-448e-e53d-677275c52395"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a score from 0-100:78\n",
+            "Okay! You got a C!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -808,26 +823,10 @@
         "# \"Updated Fibonacci sequence: \""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_dFiN8au9Tkd",
-        "outputId": "c321a841-de6d-420c-b5d7-9960ef46938d"
+        "id": "_dFiN8au9Tkd"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Given Fibonacci sequence: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233]\n",
-            "What's the next number? 45\n",
-            "45 is not the next number. Try again.\n",
-            "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233]\n",
-            "Updated Fibonacci sequence: [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
